--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   path: ^1.7.0
   path_provider: ^1.6.24
   image_picker: ^0.6.7+15
-
+  firebase_core: "0.5.3"
+  firebase_analytics: "^6.3.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
