--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   image_picker: ^0.6.7+15
   firebase_core: "0.5.3"
   firebase_analytics: "^6.3.0"
+  firebase_admob: ^0.10.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
