--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,30 +18,30 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.2+3
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: ^1.3.2+1
-  provider: ^4.3.2+3
-  intl: ^0.16.1
-  path: ^1.7.0
-  path_provider: ^1.6.24
-  image_picker: ^0.6.7+15
-  firebase_core: "0.5.3"
-  firebase_analytics: "^6.3.0"
-  firebase_admob: ^0.10.3
-  in_app_review: ^1.0.4
+  sqflite: ^2.0.0+3
+  provider: ^5.0.0
+  intl: ^0.17.0
+  path: ^1.8.0
+  path_provider: ^2.0.1
+  image_picker: ^0.7.3
+  firebase_core: ^1.0.1
+  firebase_analytics: ^7.1.1
+#  firebase_admob: ^0.10.3
+  in_app_review: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.8.1
+  flutter_launcher_icons: ^0.9.0
 
 flutter_icons:
   android: true
